base HTML creation

--- a/assets/wireframe/index.html
+++ b/assets/wireframe/index.html
@@ -1,8 +1,8 @@
 <html>
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <link type="text/css" href="download-style.css" />
-    <link type="text/css" href="text-toolbar.css" rel="stylesheet" />
+    <!-- <link type="text/css" href="download-style.css" />
+    <link type="text/css" href="text-toolbar.css" rel="stylesheet" /> -->
 </head>
 <body>
     <div style="background-image:url('data:image/jpg;base64,');width:800px;left:140px;background-repeat:no-repeat;height:1070px;">
