--- a/index.html
+++ b/index.html
@@ -1,16 +1,72 @@
 <!DOCTYPE html>
 
 <html>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title></title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="./assets/css/reset.css">
-        <link rel="stylesheet" href="./assets/css/style.css">
-    </head>
-    <body>
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <title></title>
+    <meta name="description" content="" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="./assets/css/reset.css" />
+    <link rel="stylesheet" href="./assets/css/style.css" />
+  </head>
+  <body>
+    <!-- Header -->
+    <header>
+      <div class="title">Dennis Littlefield Portfolio</div>
+      <nav>
+        <div class="links">About</div>
+        <div class="links">My Work</div>
+        <div class="links">Contact</div>
+      </nav>
+    </header>
 
-    </body>
+    <!-- Navigation -->
+
+    <!-- Professional Details Sidebar -->
+    <section class="professional-details">
+        <h2>Professional Details</h2>
+        <img src="" alt="" class="portrait">
+        <p class="professional-details">
+            <ul>
+                <li>Name</li>
+                <li>Professional Title</li>
+                <li>Location</li>
+            </ul>
+        </p>
+    </section>
+    <!-- About Me -->
+    <section class="about-me">
+        <h2>About</h2>
+        <p>About me dialogue</p>
+    </section>
+    <!-- My Work -->
+    <section class="my-work">
+        <div class="my-work__title">My Work</div>
+        <div class="my-work__first-portfolio">
+            <figure>
+                <img src="" alt="">
+                <h3>FIRST Item Title</h3>
+                <p>Item Description</p>
+            </figure>
+        </div>
+        <!-- REPEAT FOR OTHER ITEMS -->
+        <div class="my-work__portfolio-secondary">
+            <figure>
+                <img src="" alt="">
+                <h4>Secondary Item Title</h4>
+                <p>item description</p>
+            </figure>
+        </div>
+    </section>
+    <!-- Contact -->
+    <section class="contact">
+        <h2>Contact</h2>
+        <div class="contact-form">
+            <form action=""></form>
+        </div>
+    </section>
+    <!-- Footer -->
+    <footer>Bootcamp Survivor</footer>
+  </body>
 </html>
