--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 
 <html>
-  <head>
+
+<head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title></title>
@@ -9,39 +10,47 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="./assets/css/reset.css" />
     <link rel="stylesheet" href="./assets/css/style.css" />
-  </head>
-  <body>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Rubik" />
+</head>
+
+<body>
     <!-- Header -->
     <header>
-      <div class="title">Dennis Littlefield Portfolio</div>
-      <nav>
-        <div class="links">About</div>
-        <div class="links">My Work</div>
-        <div class="links">Contact</div>
-      </nav>
+        <div class="title">
+            <h1>Portfolio</h1>
+        </div>
+        <!-- Navigation -->
+        <nav>
+            <ul>
+                <li>About</li>
+                <li>My Work</li>
+                <li>Contact</li>
+            </ul>
+
+        </nav>
     </header>
 
-    <!-- Navigation -->
 
+<main>
     <!-- Professional Details Sidebar -->
-    <section class="professional-details">
+    <section class="professional_details__box box_styling">
         <h2>Professional Details</h2>
-        <img src="" alt="" class="portrait">
-        <p class="professional-details">
-            <ul>
-                <li>Name</li>
-                <li>Professional Title</li>
-                <li>Location</li>
-            </ul>
-        </p>
+        <img src="" alt="">
+        
+        <ul>
+            <li>Name</li>
+            <li>Professional Title</li>
+            <li>Location</li>
+        </ul>
+        
     </section>
     <!-- About Me -->
-    <section class="about-me">
+    <section class="about-me box_styling">
         <h2>About</h2>
         <p>About me dialogue</p>
     </section>
     <!-- My Work -->
-    <section class="my-work">
+    <section class="my-work box_styling">
         <div class="my-work__title">My Work</div>
         <div class="my-work__first-portfolio">
             <figure>
@@ -51,6 +60,7 @@
             </figure>
         </div>
         <!-- REPEAT FOR OTHER ITEMS -->
+        <!-- 3 Column Design -->
         <div class="my-work__portfolio-secondary">
             <figure>
                 <img src="" alt="">
@@ -60,13 +70,14 @@
         </div>
     </section>
     <!-- Contact -->
-    <section class="contact">
+    <section class="contact box_styling">
         <h2>Contact</h2>
         <div class="contact-form">
             <form action=""></form>
         </div>
-    </section>
+    </section></main>
     <!-- Footer -->
     <footer>Bootcamp Survivor</footer>
-  </body>
+</body>
+
 </html>
