added profile image

--- a/index.html
+++ b/index.html
@@ -1,83 +1,86 @@
 <!DOCTYPE html>
 
 <html>
-
-<head>
+  <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title></title>
+    <title>Littlefield Portfolio</title>
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="./assets/css/reset.css" />
     <link rel="stylesheet" href="./assets/css/style.css" />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Rubik" />
-</head>
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Rubik"
+    />
+  </head>
 
-<body>
+  <body>
     <!-- Header -->
-    <header>
-        <div class="title">
-            <h1>Portfolio</h1>
-        </div>
-        <!-- Navigation -->
-        <nav>
-            <ul>
-                <li>About</li>
-                <li>My Work</li>
-                <li>Contact</li>
-            </ul>
-
-        </nav>
+    <header class="shadow_effect">
+      <div class="title">
+        <h1>Portfolio</h1>
+      </div>
+      <!-- Navigation -->
+      <nav>
+        <ul>
+          <li>About</li>
+          <li>My Work</li>
+          <li>Contact</li>
+        </ul>
+      </nav>
     </header>
 
-
-<main>
-    <!-- Professional Details Sidebar -->
-    <section class="professional_details__box box_styling">
+    <main>
+        <div class="cols">
+      <!-- Professional Details Sidebar -->
+      <section class="professional_details__box box_styling">
         <h2>Professional Details</h2>
-        <img src="" alt="">
-        
+        <img src="./assets/images/profile_photo.jpg" alt="Dennis Littlefield" />
+
         <ul>
-            <li>Name</li>
-            <li>Professional Title</li>
-            <li>Location</li>
+          <li>Name</li>
+          <li>Dennis Littlefield</li>
+          <li>Professional Title</li>
+          <li>Full Stack Developer</li>
+          <li>Location</li>
+          <li>Toronto, Ontario</li>
         </ul>
-        
-    </section>
-    <!-- About Me -->
-    <section class="about-me box_styling">
+      </section></div><div>
+      <!-- About Me -->
+      <section class="about-me box_styling">
         <h2>About</h2>
-        <p>About me dialogue</p>
-    </section>
-    <!-- My Work -->
-    <section class="my-work box_styling">
-        <div class="my-work__title">My Work</div>
+        <p>Sed sed amet no justo diam amet sit sed, ut nonumy lorem erat et et, accusam clita sed at sadipscing tempor invidunt, amet est gubergren est dolor, no amet lorem dolor tempor ut tempor kasd labore eirmod, sanctus ipsum sed invidunt clita et, duo sed nonumy ea lorem. Amet duo sadipscing est ut, kasd dolor sit et nonumy diam. Consetetur consetetur lorem stet dolores. Accusam et sanctus magna no justo no et, consetetur stet et.About me dialogue</p>
+      </section>
+      <!-- My Work -->
+      <section class="my-work box_styling">
+        <h2>My Work</h2>
         <div class="my-work__first-portfolio">
-            <figure>
-                <img src="" alt="">
-                <h3>FIRST Item Title</h3>
-                <p>Item Description</p>
-            </figure>
+          <figure>
+            <img src="" alt="" />
+            <h3>FIRST Item Title</h3>
+            <p>Item Description</p>
+          </figure>
         </div>
         <!-- REPEAT FOR OTHER ITEMS -->
         <!-- 3 Column Design -->
         <div class="my-work__portfolio-secondary">
-            <figure>
-                <img src="" alt="">
-                <h4>Secondary Item Title</h4>
-                <p>item description</p>
-            </figure>
+          <figure>
+            <img src="" alt="" />
+            <h4>Secondary Item Title</h4>
+            <p>item description</p>
+          </figure>
         </div>
-    </section>
-    <!-- Contact -->
-    <section class="contact box_styling">
+      </section>
+      <!-- Contact -->
+      <section class="contact box_styling">
         <h2>Contact</h2>
         <div class="contact-form">
-            <form action=""></form>
+          <form action=""></form>
         </div>
-    </section></main>
+      </section></div>
+    </main>
     <!-- Footer -->
     <footer>Bootcamp Survivor</footer>
-</body>
-
+  </body>
 </html>
