--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>Littlefield Portfolio</title>
+    <title>The Littlefield Portfolio</title>
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="./assets/css/reset.css" />
@@ -17,68 +17,97 @@
 
   <body>
     <!-- Header -->
-    <header class="shadow_effect">
-      <div class="title">
-        <h1>Portfolio</h1>
+    <header class="header-shadow_effect flex-container">
+      <div>
+        <h1>The Littlefield Portfolio</h1>
       </div>
       <!-- Navigation -->
-      <nav>
-        <ul>
-          <li>About</li>
-          <li>My Work</li>
-          <li>Contact</li>
-        </ul>
+      <nav >
+        <div><a href="">About</a></div>
+        <div><a href="">My Work</a></div>
+        <div><a href="">Contact</a></div>
       </nav>
     </header>
 
-    <main>
-        <div class="cols">
-      <!-- Professional Details Sidebar -->
-      <section class="professional_details__box box_styling">
-        <h2>Professional Details</h2>
-        <img src="./assets/images/profile_photo.jpg" alt="Dennis Littlefield" />
+    <main class="cols">
+<div class="flex-container-1">
+<!-- Professional Details Sidebar -->
+        <section class="professional_details__box box_styling">
+          <h2>Professional Details</h2>
+          <img
+            src="./assets/images/profile_photo.jpg"
+            alt="Dennis
+            Littlefield"
+          />
 
-        <ul>
-          <li>Name</li>
-          <li>Dennis Littlefield</li>
-          <li>Professional Title</li>
-          <li>Full Stack Developer</li>
-          <li>Location</li>
-          <li>Toronto, Ontario</li>
-        </ul>
-      </section></div><div>
-      <!-- About Me -->
-      <section class="about-me box_styling">
-        <h2>About</h2>
-        <p>Sed sed amet no justo diam amet sit sed, ut nonumy lorem erat et et, accusam clita sed at sadipscing tempor invidunt, amet est gubergren est dolor, no amet lorem dolor tempor ut tempor kasd labore eirmod, sanctus ipsum sed invidunt clita et, duo sed nonumy ea lorem. Amet duo sadipscing est ut, kasd dolor sit et nonumy diam. Consetetur consetetur lorem stet dolores. Accusam et sanctus magna no justo no et, consetetur stet et.About me dialogue</p>
-      </section>
-      <!-- My Work -->
-      <section class="my-work box_styling">
-        <h2>My Work</h2>
-        <div class="my-work__first-portfolio">
-          <figure>
-            <img src="" alt="" />
-            <h3>FIRST Item Title</h3>
-            <p>Item Description</p>
-          </figure>
-        </div>
-        <!-- REPEAT FOR OTHER ITEMS -->
-        <!-- 3 Column Design -->
-        <div class="my-work__portfolio-secondary">
-          <figure>
-            <img src="" alt="" />
-            <h4>Secondary Item Title</h4>
-            <p>item description</p>
-          </figure>
-        </div>
-      </section>
-      <!-- Contact -->
-      <section class="contact box_styling">
-        <h2>Contact</h2>
-        <div class="contact-form">
-          <form action=""></form>
-        </div>
-      </section></div>
+          <ul>
+            <li>Name</li>
+            <li>Dennis Littlefield</li>
+            <li>Professional Title</li>
+            <li>Full Stack Developer</li>
+            <li>Location</li>
+            <li>Toronto, Ontario</li>
+          </ul>
+        </section>
+</div>
+<div class="flex-container-2">
+        <!-- About Me -->
+        <section class="about-me box_styling">
+          <h2>About</h2>
+          <p>
+            Sed sed amet no justo diam amet sit sed, ut nonumy lorem erat et et,
+            accusam clita sed at sadipscing tempor invidunt, amet est gubergren
+            est dolor, no amet lorem dolor tempor ut tempor kasd labore eirmod,
+            sanctus ipsum sed invidunt clita et, duo sed nonumy ea lorem. Amet
+            duo sadipscing est ut, kasd dolor sit et nonumy diam. Consetetur
+            consetetur lorem stet dolores. Accusam et sanctus magna no justo no
+            et, consetetur stet et.About me dialogue
+          </p>
+        </section>
+        <!-- My Work -->
+        <section class="my-work box_styling">
+          <h2>My Work</h2>
+          <div class="my-work__first-portfolio">
+            <figure>
+              <img src="" alt="" />
+              <h3>FIRST Item Title</h3>
+              <p>Item Description</p>
+            </figure>
+          </div>
+          <!-- REPEAT FOR OTHER ITEMS -->
+          <!-- 3 Column Design -->
+          <div class="my-work__portfolio-secondary">
+            <figure>
+              <img src="" alt="" />
+              <h4>Secondary Item Title</h4>
+              <p>item description</p>
+            </figure>
+          </div>
+        </section>
+        <!-- Contact -->
+        <section class="contact box_styling">
+          <h2>Contact</h2>
+          <div class="contact-form">
+            <form action=""></form>
+          </div>
+        </section>
+      </div>
+</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
     </main>
     <!-- Footer -->
     <footer>Bootcamp Survivor</footer>
