sized sections and corrected appearance

--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
       </div>
       <!-- Navigation -->
       <nav >
-        <div><a href="">About</a></div>
-        <div><a href="">My Work</a></div>
-        <div><a href="">Contact</a></div>
+        <div><a href="#about-anchor">About</a></div>
+        <div><a href="#mywork-anchor">My Work</a></div>
+        <div><a href="#contact-anchor">Contact</a></div>
       </nav>
     </header>
 
-    <main class="cols">
+    <main>
 <div class="flex-container-1">
 <!-- Professional Details Sidebar -->
         <section class="professional_details__box box_styling">
@@ -52,7 +52,7 @@
 </div>
 <div class="flex-container-2">
         <!-- About Me -->
-        <section class="about-me box_styling">
+        <section id="about-anchor" class="about-me box_styling">
           <h2>About</h2>
           <p>
             Sed sed amet no justo diam amet sit sed, ut nonumy lorem erat et et,
@@ -65,7 +65,7 @@
           </p>
         </section>
         <!-- My Work -->
-        <section class="my-work box_styling">
+        <section id="mywork-anchor" class="my-work box_styling">
           <h2>My Work</h2>
           <div class="my-work__first-portfolio">
             <figure>
@@ -85,7 +85,7 @@
           </div>
         </section>
         <!-- Contact -->
-        <section class="contact box_styling">
+        <section id="contact-anchor" class="contact box_styling">
           <h2>Contact</h2>
           <div class="contact-form">
             <form action=""></form>
