added portfolio items

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="./assets/css/style.css" />
     <link
       rel="stylesheet"
-      href="https://fonts.googleapis.com/css?family=Rubik"
+      href="https://fonts.googleapis.com/css?family=Rubik|Roboto"
     />
   </head>
 
@@ -66,23 +66,39 @@
         </section>
         <!-- My Work -->
         <section id="mywork-anchor" class="my-work box_styling">
+          <article class="">
           <h2>My Work</h2>
-          <div class="my-work__first-portfolio">
+          <div class="my-work__first_card">
             <figure>
-              <img src="" alt="" />
+              <img src="./assets/images/offworld_a.png" alt="Offworld Web Services Project" />
               <h3>FIRST Item Title</h3>
               <p>Item Description</p>
             </figure>
-          </div>
+          </div></article>
           <!-- REPEAT FOR OTHER ITEMS -->
           <!-- 3 Column Design -->
-          <div class="my-work__portfolio-secondary">
-            <figure>
-              <img src="" alt="" />
+          <article class="my-work__second">
+          <div class="my-work__second_card">
+            <figure><a href="http://tashanevents.ca">
+              <img src="./assets/images/tashan_a.png" alt="Tashan Events Project" />
               <h4>Secondary Item Title</h4>
-              <p>item description</p>
+              <p>item description</p></a>
             </figure>
           </div>
+          <div class="my-work__second_card">
+            <figure><a href="http://livelihoodkitchen.com">
+              <img src="./assets/images/livelihoodkitchen_a.png" alt="Livelihood kitchen Project" />
+              <h4>Secondary Item Title</h4>
+              <p>item description</p></a>
+            </figure>
+          </div>
+          <div class="my-work__second_card">
+            <figure><a href="http://adventureessentials.ca">
+              <img src="./assets/images/adventureessential_a.png" alt="Adventure Essential Project" />
+              <h4>Secondary Item Title</h4>
+              <p>item description</p></a>
+            </figure>
+          </div></article>
         </section>
         <!-- Contact -->
         <section id="contact-anchor" class="contact box_styling">
