begin working on @media tags

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <title>The Littlefield Portfolio</title>
+  <link rel="icon" type="image/x-icon" href="./assets/images/favicon.png">
   <meta name="description" content="" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="stylesheet" href="./assets/css/reset.css" />
@@ -27,8 +28,8 @@
     </nav>
   </header>
 
-  <main>
-    <div class="flex-container-1">
+  <main class="full-document-container">
+    <div class="full-document-column-1">
       <!-- Professional Details Sidebar -->
       <section class="professional_details__box box_styling">
         <h2>Professional Details</h2>
@@ -45,7 +46,7 @@
         </ul>
       </section>
     </div>
-    <div class="flex-container-2">
+    <div class="full-document-column-2">
       <!-- About Me -->
       <section id="about-anchor" class="about-me box_styling">
         <h2>About</h2>
@@ -71,8 +72,8 @@
         </article>
         <!-- REPEAT FOR OTHER ITEMS -->
         <!-- 3 Column Design -->
-        <article class="my-work__second">
-          <div class="my-work__second_card">
+        <article class="my-work-container">
+          <div class="my-work-itembox">
             <figure><a href="http://tashanevents.ca">
                 <img src="./assets/images/tashan_a.png" alt="Tashan Events Project" />
                 <h4>Tashan Events</h4>
@@ -80,7 +81,7 @@
               </a>
             </figure>
           </div>
-          <div class="my-work__second_card">
+          <div class="my-work-itembox">
             <figure><a href="http://livelihoodkitchen.com">
                 <img src="./assets/images/livelihoodkitchen_a.png" alt="Livelihood kitchen Project" />
                 <h4>Livelihood kitchen by LivelihoodProject.org</h4>
@@ -88,7 +89,7 @@
               </a>
             </figure>
           </div>
-          <div class="my-work__second_card">
+          <div class="my-work-itembox">
             <figure><a href="https://lab.research.sickkids.ca/campos/">
                 <img src="./assets/images/camposlab_a.png" alt="Campos Lab Project" />
                 <h4>CamposLab @ SickKids</h4>
@@ -136,7 +137,7 @@
 
   </main>
   <!-- Footer -->
-  <footer>Bootcamp Survivor</footer>
+  <footer>©2022 Littlefield Labs "Bootcamp Survivor"</footer>
 </body>
 
 </html>
