--- a/index.html
+++ b/index.html
@@ -20,12 +20,13 @@
     <div>
       <h1>The Littlefield Portfolio</h1>
     </div>
-    <!-- Navigation -->
-    <nav>
+    <!-- Navigation --><div>
+      <nav>
       <div><a href="#about-anchor">About</a></div>
       <div><a href="#mywork-anchor">My Work</a></div>
       <div><a href="#contact-anchor">Contact</a></div>
-    </nav>
+    </nav></div>
+
   </header>
 
   <main class="full-document-container">
@@ -44,7 +45,7 @@
           <li>Location</li>
           <li>Toronto, Ontario</li>
         </ul>
-        <p align="center" class="professional_details__CV"><a href="">Download CV [PDF]</a></p>
+        <p align="center" class="professional_details__CV"><a href="https://www.linkedin.com/in/dennislittlefield/">View My LinkedIn</a></p>
       </section>
     </div>
     <div class="full-document-column-2">
