Added Horiseon project to my work

--- a/index.html
+++ b/index.html
@@ -66,7 +66,12 @@
     <h2>My Work</h2>
       <!-- Portfolio Items -->
       <article id="showcase">
-          
+                      <figure><a href="https://dlittlefield81.github.io/horiseon-web/">
+                <img src="./assets/images/horiseon_a.png" alt="Horiseon Project" />
+                <h4>Horiseon</h4>
+                <p>Refactoring project.</p>
+              </a>
+            </figure>
               <figure ><a href="http://offworld.ca">
                       <img src="./assets/images/offworld_a.png" alt="Offworld Web Services Project" />
                       <h3>Offworld Web Services</h3>
@@ -85,12 +90,7 @@
                 <p>Bollywood Events for the LGBTQAI+ Community.</p>
               </a>
             </figure> 
-            <figure><a href="https://lab.research.sickkids.ca/campos/">
-                <img src="./assets/images/camposlab_a.png" alt="Campos Lab Project" />
-                <h4>CamposLab @ SickKids</h4>
-                <p>Studying epigenetics at SickKids Labs.</p>
-              </a>
-            </figure>
+
           
         </article>
   </div>
