added :before tag fixed contact id and added wingky to readme for asssisting

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <!-- Header -->
   <header class="header-shadow_effect header-nav-container">
     <div>
-      <h1>The Littlefield Portfolio</h1>
+      <h1 class="Littlefield">Portfolio</h1>
     </div>
     <!-- Navigation --><div>
       <nav>
@@ -94,7 +94,7 @@
           
         </article>
   </div>
-  <div class="contact__container box_styling">
+  <div id="contact-anchor" class="contact__container box_styling">
       <h2>Contact</h2>
       <div class="contact-form">
         <form action="#" method="post">
