added languages to professional section

--- a/index.html
+++ b/index.html
@@ -40,6 +40,8 @@
         <ul>
           <li>Name</li>
           <li>Dennis Littlefield</li>
+          <li>Languages</li>
+          <li>English / French</li>
           <li>Professional Title</li>
           <li>Full Stack Developer</li>
           <li>Location</li>
