--- a/index.html
+++ b/index.html
@@ -22,9 +22,11 @@
     </div>
     <!-- Navigation --><div>
       <nav>
+        <div class="hideMe"><a href="#details-anchor">Details</a></div>
       <div><a href="#about-anchor">About</a></div>
       <div><a href="#mywork-anchor">My Work</a></div>
       <div><a href="#contact-anchor">Contact</a></div>
+
     </nav></div>
 
   </header>
@@ -32,7 +34,7 @@
   <main class="full-document-container">
     <div class="full-document-column-1">
       <!-- Professional Details Sidebar -->
-      <section class="professional_details__box box_styling">
+      <section id="details-anchor" class="professional_details__box box_styling">
         <h2>Professional Details</h2>
         <img src="./assets/images/profile_photo.jpg" alt="Dennis
             Littlefield" />
