--- a/index.html
+++ b/index.html
@@ -61,10 +61,13 @@
   <div id="about-anchor" class="about-me__container box_styling">
       <h2>About</h2>
       <p>
-        Full Stack Developer leveraging over 20 years of customer service, problem-solving, and critical thinking background.
-        Currently working on a certificate as a Full Stack Developer from the University of Toronto Bootcamp, with newly
-        developed skills in JavaScript, NodeJS, and ExpressJS. Experienced in optimizing productivity, efficiency and service
-        quality across various environments.
+        Full Stack Developer leveraging over 20 years of customer service, problem-solving and critical thinking background to
+        build a more intuitive user experience on the web. Currently working on my certificate as a Full stack Web Developer
+        stack developer from the University of Toronto Bootcamp, with newly developed skills in JavaScript, CSS, React.js, and
+        responsive web design. With each project, my aim is to best engage my audience for an impactful user experience. I
+        applied aspects of UX and agile development in a recent project. I worked on a team of two to develop a single-page
+        app that helps users find flights and fares by selecting their origin, destination, and travel date.
+        I’m excited to leverage my skills as part of a fast-paced, quality-driven team to build better experiences on the web.
       </p>
   </div>
   <!-- MY WORK SECTION -->
@@ -78,6 +81,17 @@
                 <p>JavaScript Flight API project</p><a href="https://github.com/DLittlefield81/FlytCheckr"><p>View on <b>GitHub</b></p></center>
                 
               </a>
+            </figure>
+            <figure>
+              <img src="https://github.com/DLittlefield81/pet-playdate/blob/main/public/images/pet-playdate.png?raw=true"
+                alt="Pet Playdate" />
+              <Center>
+                <h3>Pet Playdate</h3>
+                <p>ExpressJS, Handlebars, Sessions, Sequilize </p>
+                <a href="https://github.com/DLittlefield81/pet-playdate">
+                  <p>View on <b>GitHub</b></p>
+                </a>
+              </Center>
             </figure>
               <figure >
                       <img src="https://github.com/DLittlefield81/WordWise/raw/main/assets/images/wordwise.png" alt="WordWise Trivia Game" />
